# missile-command-3d

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  asteroids.py  camera.py  class_obj.py  colision.py  constants.py  explosion.py  ground.py  iluminacao.py  missile.py  score.py  status_panel.py  texture.py  utils.py
